# yage

./: AUTHORS  CMakeLists.txt  COPYING  Doxyfile.in  INSTALL  README  config.h.in  global.h.in  main.cpp  yageconfig.h.in
blender/: ExportMesh.py  MeshFormatSpec.txt
cmake/: CheckCXX11Features.cmake  Findyage.cmake  c++11-test-auto-N2546.cpp  c++11-test-constexpr-N2235.cpp  c++11-test-delegating_ctors-N1986.cpp  c++11-test-nullptr-N2431.cpp  c++11-test-rvalue_references-N2118.cpp  c++11-test-sizeof_member-N2253.cpp
configs/: config.cf
include/: Camera.h  CommandParser.h  Config.h  CubeTexture.h  DeveloperConsole.h  DirectedLight.h  Extention.h  FrameBuffer.h  Frustum.h  Game.h  Image.h  ImageTexture.h  Light.h  Logger.h  Mat3.h  Mat4.h  Mesh.h  Movable.h  OpenGLWindow.h  OrthographicProjection.h  PerspectiveProjection.h  PointLight.h  Projection.h  Quaternion.h  RenderEffect.h  Renderable.h  Renderer.h  Rotatable.h  Scalable.h  Scene.h  ShaderLoader.h  ShadowCubeMapArray.h  ShadowMap.h  ShadowMapArray.h  SkyBox.h  SpotLight.h  TGAImage.h  Texture.h  Vec3.h  Vec4.h  (+2 more)
shaders/: generic_illumination.fs  generic_illumination.vs  lambert_phong_shading.fs  mvp_lightsource.vs  mvp_transform.vs  shadowmap.fs  shadowmap.vs  skybox.fs
src/: Camera.cpp  CommandParser.cpp  Config.cpp  CubeTexture.cpp  DeveloperConsole.cpp  DirectedLight.cpp  Extention.cpp  FrameBuffer.cpp  Frustum.cpp  Game.cpp  Image.cpp  ImageTexture.cpp  Light.cpp  Logger.cpp  Mat3.cpp  Mat4.cpp  Mesh.cpp  Movable.cpp  OpenGLWindow.cpp  OrthographicProjection.cpp  PerspectiveProjection.cpp  PointLight.cpp  Projection.cpp  Quaternion.cpp  RenderEffect.cpp  Renderable.cpp  Renderer.cpp  Rotatable.cpp  Scalable.cpp  Scene.cpp  ShaderLoader.cpp  ShadowCubeMapArray.cpp  ShadowMap.cpp  ShadowMapArray.cpp  SkyBox.cpp  SpotLight.cpp  TGAImage.cpp  Texture.cpp  Vec3.cpp  Vec4.cpp
tests/sample/: CMakeLists.txt  SampleTest.cpp  SampleTest.h
